[package]
name = "arci-rgz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arci = "0.1.0"
openrr-planner = "0.1.0"
parking_lot = "0.12"
schemars = "0.8"
scoped-sleep = "0.1.0"
serde_json = "1"
serde = "1"
tokio = { version = "1", features = ["sync", "parking_lot"] }
tracing = "0.1"

rgz = { version = "0.1.1", features = ["transport"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"]}

[patch.crates-io]
rgz = { path = "../rgz" }
